--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body class="homepage1-body">
     <!--===== PRELOADER STARTS =======-->
-    <div class="overlay flex cac vac preloader-parent">
+<!--     <div class="overlay flex cac vac preloader-parent">
         <div>
             <div class="loader preloader flex vac">
                 <svg width="200" height="200">
@@ -42,7 +42,7 @@
               </span>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--===== PRELOADER ENDS =======-->
 
     <!--===== PROGRESS STARTS=======-->
@@ -776,3 +776,4 @@
 </body>
 
 </html>
+
