--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <title>Harsh Dungarani || Personal Portfolio</title>
+    <title>Manish kumar || Personal Portfolio</title>
 
     <!--=====FAB ICON=======-->
     <link rel="shortcut icon" href="assets/img/logo/Group-logo.png" type="image/x-icon">
@@ -108,7 +108,7 @@
                                 <i class="fa-solid fa-envelope"></i>
                             </div>
                             <div class="contact-info-text">
-                                <a href="mailto:harshdungarani36.com">harshdungarani36.com</a>
+                                <a href="mailto:ermanishkm9@gmail.com">ermanishkm9@gmail.com</a>
                             </div>
                         </div>
                         <div class="space20"></div>
@@ -119,7 +119,7 @@
                                     <i class="fa-solid fa-location-dot"></i>
                                 </div>
                                 <div class="contact-info-text">
-                                    <a href="mailto:harshdungarani36.com">218, Divy Mall, nr. Manisha Garnala, <br> Amroli, Surat, Gujarat 394107</a>
+                                    <a href="mailto:ermanishkm9@gmail.com">House no 924, Preet Colony <br> Near khera mandir, Zirakpur, Punjab 140603</a>
                                 </div>
                             </div>
                         </div>
@@ -128,8 +128,8 @@
                             <h3>Social Links</h3>
                             <div class="social-links-mobile-menu">
                                 <ul>
-                                    <li><a href="https://github.com/harshdungarani007" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/harsh-dungarani-916319178/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+<!--                                     <li><a href="https://github.com/harshdungarani007" target="_blank"><i class="fa-brands fa-github"></i></a></li> -->
+                                    <li><a href="https://www.linkedin.com/in/manish-kumar-shopify-wordpress-expert/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     <li><a href="https://www.youtube.com/@shopifydev7352" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
                                 </ul>
                             </div>
@@ -776,4 +776,5 @@
 </body>
 
 </html>
+
 
