--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-12">
                 <div class="mobile-header-elements">
                     <div class="mobile-logo">
-                        <a href="index.html"><img src="assets/img/logo/logo2.png" alt=""></a>
+                        <a href="index.html"><img src="assets/logo/logo2.png" alt=""></a>
                     </div>
                     <div class="mobile-nav-icon dots-menu d-lg-none">
                         <i class="fa-solid fa-bars"></i>
@@ -776,5 +776,6 @@
 </body>
 
 </html>
+
 
 
